[gd_scene load_steps=13 format=2]

[ext_resource path="res://Bug_move.gd" type="Script" id=1]
[ext_resource path="res://png/character1.2.png" type="Texture" id=2]
[ext_resource path="res://png/animations/character2-Sheet-export.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.5, 16.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/animation_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/animation_sheet:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "attk"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/animation_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[sub_resource type="Animation" id=9]
resource_name = "died"

[sub_resource type="Animation" id=10]
resource_name = "hitted"

[sub_resource type="Animation" id=5]
resource_name = "idel"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/animation_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=11]
resource_name = "jump"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/animation_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/animation_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}

[node name="Bug" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -19 )
shape = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -3, -22 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )

[node name="Tween_dash" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/attk = SubResource( 12 )
anims/died = SubResource( 9 )
anims/hitted = SubResource( 10 )
anims/idel = SubResource( 5 )
anims/jump = SubResource( 11 )
anims/walk = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
smoothing_enabled = true

[node name="Button" type="Button" parent="Camera2D"]
visible = false
margin_left = -417.0
margin_top = -220.0
margin_right = -372.0
margin_bottom = -185.0
text = "reset"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1, -12 )
scale = Vector2( 1, 1 )

[node name="animation_sheet" type="Sprite" parent="Position2D"]
position = Vector2( -2, -1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
offset = Vector2( 170, -140 )
hframes = 10
vframes = 6
frame = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_down" from="Camera2D/Button" to="." method="_on_Button_button_down"]
